add update properties

--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.servlet.context-path                                 = /parking
 
 # JPA Default Configurations
 spring.jpa.database                                         = default
-spring.jpa.hibernate.ddl-auto                               = create
+spring.jpa.hibernate.ddl-auto                               = update
 spring.jpa.generate-ddl                                     = true
 
 # Configuration for postgres
